[project]
name = "quickstart"
version = "0.1.0"
description = "Agno quickstart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.2",
    "google>=3.0.0",
    "openai>=2.8.1",
    "openrouter>=0.0.19",
]

[tool.pyright]
typeCheckingMode = "recommended"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]
